--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Base</title>
-</head>
+{% include "global/partials/head.html" %}
 <body>
-  <h1>{% block texto %} Base {% endblock texto %}</h1>
-</body>
+    <h1>{% block texto %} Base {% endblock texto %}</h1>
+  </body>
 </html>
