--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,5 +1,11 @@
 {% include "global/partials/head.html" %}
+{% include "global/partials/menu.html" %}
 <body>
     <h1>{% block texto %} Base {% endblock texto %}</h1>
-  </body>
+
+    <main class="posts">
+      {% include "global/partials/postblock.html" %}
+    </main>
+
+</body>
 </html>
