--- a/base/global/base.html
+++ b/base/global/base.html
@@ -3,8 +3,9 @@
 <body>
     <h1>{% block texto %} Base {% endblock texto %}</h1>
 
-    <main class="posts">
-      {% include "global/partials/postblock.html" %}
+    <main class="content">
+      {% block posts %}{% endblock posts %}
+      {% block home %}{% endblock home %}
     </main>
 
 </body>
