--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,12 +1,15 @@
 {% include "global/partials/head.html" %}
 {% include "global/partials/menu.html" %}
 <body>
-    <h1>{% block texto %} Base {% endblock texto %}</h1>
 
-    <main class="content">
-      {% block posts %}{% endblock posts %}
-      {% block home %}{% endblock home %}
-    </main>
+  {% if text %}
+    <h1>{% block texto %} Base {% endblock texto %}</h1>
+  {% endif %}
+
+  <main class="content">
+    {% block posts %}{% endblock posts %}
+    {% block home %}{% endblock home %}
+  </main>
 
 </body>
 </html>
